--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,14 +15,20 @@
   </div>
   <div id="menu">
     <ul>
-      <li><a href="/">Home</a></li>
-      <li><a href="/list">Projects</a></li>
-      <li><a href="/techniques">Techniques</a></li>
-      <li><a href="/search">Advanced Search</a></li>
+      <li><a href="/">Hem</a></li>
+      <li><a href="/list">Projekt</a></li>
+      <li><a href="/techniques">Tekniker</a></li>
+      <li><a href="/search">Avancerad Sökning</a></li>
     </ul>
   </div>
   <div id="side_bar">
     <h2>Anton Lindgren</h2>
+    <img src="../static/images/rosa.jpg">
+      <p>Prästbolsgatan 12</p>
+      <p>58733 Linköping</p>
+      <p>1993-01-23</p>
+      <p>076 - 055 73 70</p>
+      <p>bantonlindgren@gmail.com</p>
   </div>
   <div id="content">
     {% block content %} {% endblock %}
