--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,19 @@
 {% extends "layout.html" %}
 {% block content %}
 <div id="article_header"><h1>Portfolio</h1></div>
+
 {% for d in data.get_random_projects(db) %}
-<a href="/list">
+<a href="/project/{{d['project_no']}}">
 <div id="article">
-  <img src="{{d['small_image']}}">
+  <img id="small_img"src="/static/images/{{d['small_image']}}">
   <h2>{{d['project_name']}}</h2>
   <p><em>{{d['start_date']}}  -  {{d['end_date']}}</em></p>
-  <p>{{d['short_description']}}</p>
+  <p>{{d['short_description']}}</p><br>
+  <p><b>Använda tekniker: </b>
+    <em>{% for technique in d['techniques_used'] %}
+    {% if not technique == d['techniques_used'][0] %}, {% endif %}
+    {{technique}}
+    {% endfor %}</em></p>
 </div>
 </a>
 {% endfor %}
