--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"> 
 <html>
 <head>
 
   <meta charset="utf-8">
-  <link rel="stylesheet" href="../static/style/style.css">
+  <link rel="stylesheet" href="/static/style/style.css">
   <title>Portfolio - Anton Lindgren</title>
 
 </head>
@@ -23,7 +23,7 @@
   </div>
   <div id="side_bar">
     <h2>Anton Lindgren</h2>
-    <img src="../static/images/rosa.jpg">
+    <img src="/static/images/rosa.jpg">
       <p>Prästbolsgatan 12</p>
       <p>58733 Linköping</p>
       <p>1993-01-23</p>
