--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 {% for d in data.get_random_projects(db) %}
 <a href="/project/{{d['project_no']}}">
 <div id="article">
-  <img id="small_img"src="/static/images/{{d['small_image']}}">
+  <img src="/static/images/{{d['small_image']}}">
   <h2>{{d['project_name']}}</h2>
   <p><em>{{d['start_date']}}  -  {{d['end_date']}}</em></p>
   <p>{{d['short_description']}}</p><br>
