--- a/templates/404.html
+++ b/templates/404.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 <div id="article_header">
-  <h1>Page not found</h1>
+  <h1>Ojski Pojski<br /> Sidan hittades inte</h1>
 </div>
 <a href="/">
 <div id="article">
