--- a/templates/500.html
+++ b/templates/500.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div id="article_header">
-  <h1>Internt serverfel</h1>
+  <h1>Ojski Pojski<br /> Internt serverfel</h1>
 </div>
 <div id="article_no_hover">
   <p><a href="/">Tillbaka till startsidan</a></p>
