--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,9 +10,9 @@
 <body>
 
 <div id="big_wrapper">
-  <div id="header">
+  <a href="/"><div id="header">
     <h1 id="header_title">Webbportfolio</h1>
-  </div>
+  </div></a>
   <div id="menu">
     <ul>
       <li><a href="/">Hem</a></li>
